# name: test_remove_answer[integer-23]
  <class 'OrderedDict'> {
    'removeAnswer': <class 'dict'> {
      'answer': <class 'dict'> {
        '__typename': 'IntegerAnswer',
        'id': 'SW50ZWdlckFuc3dlcjpOb25l',
        'meta': <class 'dict'> {
        },
      },
      'clientMutationId': None,
    },
  }
---
# name: test_remove_default_answer[integer-23]
  <class 'OrderedDict'> {
    'removeDefaultAnswer': <class 'dict'> {
      'clientMutationId': None,
      'question': <class 'dict'> {
        '__typename': 'IntegerQuestion',
        'id': 'SW50ZWdlclF1ZXN0aW9uOmVmZm9ydC1tZWV0',
        'meta': <class 'dict'> {
        },
      },
    },
  }
---
# name: test_save_calculated_dependency_default_answer[float-0.1]
  Answer(document=None, question=Question(slug=effort-meet, type=float), value=0.1)
---
# name: test_save_default_answer_graphql[choice-option-slug-None-SaveDefaultStringAnswer-True-option-slug-False]
  <class 'OrderedDict'> {
    'saveDefaultStringAnswer': <class 'dict'> {
      'answer': <class 'dict'> {
        '__typename': 'StringAnswer',
        'stringValue': 'option-slug',
      },
      'clientMutationId': 'testid',
    },
  }
---
# name: test_save_default_answer_graphql[choice-option-slug-None-SaveDefaultStringAnswer-True-option-slug-True]
  <class 'OrderedDict'> {
    'saveDefaultStringAnswer': <class 'dict'> {
      'answer': <class 'dict'> {
        '__typename': 'StringAnswer',
        'stringValue': 'option-slug',
      },
      'clientMutationId': 'testid',
    },
  }
---
# name: test_save_default_answer_graphql[date-None-2019-02-22-SaveDefaultDateAnswer-True-option-slug-False]
  <class 'OrderedDict'> {
    'saveDefaultDateAnswer': <class 'dict'> {
      'answer': <class 'dict'> {
        '__typename': 'DateAnswer',
        'dateValue': '2019-02-22',
      },
      'clientMutationId': 'testid',
    },
  }
---
# name: test_save_default_answer_graphql[date-None-2019-02-22-SaveDefaultDateAnswer-True-option-slug-True]
  <class 'OrderedDict'> {
    'saveDefaultDateAnswer': <class 'dict'> {
      'answer': <class 'dict'> {
        '__typename': 'DateAnswer',
        'dateValue': '2019-02-22',
      },
      'clientMutationId': 'testid',
    },
  }
---
# name: test_save_default_answer_graphql[float-2.1-None-SaveDefaultFloatAnswer-True-option-slug-False]
  <class 'OrderedDict'> {
    'saveDefaultFloatAnswer': <class 'dict'> {
      'answer': <class 'dict'> {
        '__typename': 'FloatAnswer',
        'floatValue': 2.1,
      },
      'clientMutationId': 'testid',
    },
  }
---
# name: test_save_default_answer_graphql[float-2.1-None-SaveDefaultFloatAnswer-True-option-slug-True]
  <class 'OrderedDict'> {
    'saveDefaultFloatAnswer': <class 'dict'> {
      'answer': <class 'dict'> {
        '__typename': 'FloatAnswer',
        'floatValue': 2.1,
      },
      'clientMutationId': 'testid',
    },
  }
---
# name: test_save_default_answer_graphql[integer-1-None-SaveDefaultIntegerAnswer-True-option-slug-False]
  <class 'OrderedDict'> {
    'saveDefaultIntegerAnswer': <class 'dict'> {
      'answer': <class 'dict'> {
        '__typename': 'IntegerAnswer',
        'integerValue': 1,
      },
      'clientMutationId': 'testid',
    },
  }
---
# name: test_save_default_answer_graphql[integer-1-None-SaveDefaultIntegerAnswer-True-option-slug-True]
  <class 'OrderedDict'> {
    'saveDefaultIntegerAnswer': <class 'dict'> {
      'answer': <class 'dict'> {
        '__typename': 'IntegerAnswer',
        'integerValue': 1,
      },
      'clientMutationId': 'testid',
    },
  }
---
# name: test_save_default_answer_graphql[multiple_choice-answer__value5-None-SaveDefaultListAnswer-True-option-slug-False]
  <class 'OrderedDict'> {
    'saveDefaultListAnswer': <class 'dict'> {
      'answer': <class 'dict'> {
        '__typename': 'ListAnswer',
        'listValue': <class 'list'> [
          'option-slug',
        ],
      },
      'clientMutationId': 'testid',
    },
  }
---
# name: test_save_default_answer_graphql[multiple_choice-answer__value5-None-SaveDefaultListAnswer-True-option-slug-True]
  <class 'OrderedDict'> {
    'saveDefaultListAnswer': <class 'dict'> {
      'answer': <class 'dict'> {
        '__typename': 'ListAnswer',
        'listValue': <class 'list'> [
          'option-slug',
        ],
      },
      'clientMutationId': 'testid',
    },
  }
---
# name: test_save_default_answer_graphql[table-None-None-SaveDefaultTableAnswer-True-option-slug-False]
  <class 'OrderedDict'> {
    'saveDefaultTableAnswer': <class 'dict'> {
      'answer': <class 'dict'> {
        '__typename': 'TableAnswer',
        'table_value': <class 'list'> [
          <class 'dict'> {
            'form': <class 'dict'> {
              'slug': 'suggest-traditional',
            },
          },
          <class 'dict'> {
            'form': <class 'dict'> {
              'slug': 'suggest-traditional',
            },
          },
        ],
      },
      'clientMutationId': 'testid',
    },
  }
---
# name: test_save_default_answer_graphql[table-None-None-SaveDefaultTableAnswer-True-option-slug-True]
  <class 'OrderedDict'> {
    'saveDefaultTableAnswer': <class 'dict'> {
      'answer': <class 'dict'> {
        '__typename': 'TableAnswer',
        'table_value': <class 'list'> [
          <class 'dict'> {
            'form': <class 'dict'> {
              'slug': 'suggest-traditional',
            },
          },
          <class 'dict'> {
            'form': <class 'dict'> {
              'slug': 'suggest-traditional',
            },
          },
        ],
      },
      'clientMutationId': 'testid',
    },
  }
---
# name: test_save_default_answer_graphql[text-Test-None-SaveDefaultStringAnswer-True-option-slug-False]
  <class 'OrderedDict'> {
    'saveDefaultStringAnswer': <class 'dict'> {
      'answer': <class 'dict'> {
        '__typename': 'StringAnswer',
        'stringValue': 'Test',
      },
      'clientMutationId': 'testid',
    },
  }
---
# name: test_save_default_answer_graphql[text-Test-None-SaveDefaultStringAnswer-True-option-slug-True]
  <class 'OrderedDict'> {
    'saveDefaultStringAnswer': <class 'dict'> {
      'answer': <class 'dict'> {
        '__typename': 'StringAnswer',
        'stringValue': 'Test',
      },
      'clientMutationId': 'testid',
    },
  }
---
# name: test_save_default_answer_graphql[textarea-Test-None-SaveDefaultStringAnswer-True-option-slug-False]
  <class 'OrderedDict'> {
    'saveDefaultStringAnswer': <class 'dict'> {
      'answer': <class 'dict'> {
        '__typename': 'StringAnswer',
        'stringValue': 'Test',
      },
      'clientMutationId': 'testid',
    },
  }
---
# name: test_save_default_answer_graphql[textarea-Test-None-SaveDefaultStringAnswer-True-option-slug-True]
  <class 'OrderedDict'> {
    'saveDefaultStringAnswer': <class 'dict'> {
      'answer': <class 'dict'> {
        '__typename': 'StringAnswer',
        'stringValue': 'Test',
      },
      'clientMutationId': 'testid',
    },
  }
---
# name: test_save_default_answer_python_api[choice-option-slug-None-True-option-slug-False]
  Answer(document=None, question=Question(slug=effort-meet, type=choice), value='option-slug')
---
# name: test_save_default_answer_python_api[choice-option-slug-None-True-option-slug-True]
  Answer(document=None, question=Question(slug=effort-meet, type=choice), value='option-slug')
---
# name: test_save_default_answer_python_api[date-None-2019-02-22-True-option-slug-False]
  Answer(document=None, question=Question(slug=effort-meet, type=date), value=None)
---
# name: test_save_default_answer_python_api[date-None-2019-02-22-True-option-slug-True]
  Answer(document=None, question=Question(slug=effort-meet, type=date), value=None)
---
# name: test_save_default_answer_python_api[float-2.1-None-True-option-slug-False]
  Answer(document=None, question=Question(slug=effort-meet, type=float), value=2.1)
---
# name: test_save_default_answer_python_api[float-2.1-None-True-option-slug-True]
  Answer(document=None, question=Question(slug=effort-meet, type=float), value=2.1)
---
# name: test_save_default_answer_python_api[integer-1-None-True-option-slug-False]
  Answer(document=None, question=Question(slug=effort-meet, type=integer), value=1)
---
# name: test_save_default_answer_python_api[integer-1-None-True-option-slug-True]
  Answer(document=None, question=Question(slug=effort-meet, type=integer), value=1)
---
# name: test_save_default_answer_python_api[multiple_choice-answer__value5-None-True-option-slug-False]
  Answer(document=None, question=Question(slug=effort-meet, type=multiple_choice), value=['option-slug'])
---
# name: test_save_default_answer_python_api[multiple_choice-answer__value5-None-True-option-slug-True]
  Answer(document=None, question=Question(slug=effort-meet, type=multiple_choice), value=['option-slug'])
---
# name: test_save_default_answer_python_api[table-None-None-True-option-slug-False]
  Answer(document=None, question=Question(slug=effort-meet, type=table), value=None)
---
# name: test_save_default_answer_python_api[table-None-None-True-option-slug-True]
  Answer(document=None, question=Question(slug=effort-meet, type=table), value=None)
---
# name: test_save_default_answer_python_api[text-Test-None-True-option-slug-False]
  Answer(document=None, question=Question(slug=effort-meet, type=text), value='Test')
---
# name: test_save_default_answer_python_api[text-Test-None-True-option-slug-True]
  Answer(document=None, question=Question(slug=effort-meet, type=text), value='Test')
---
# name: test_save_default_answer_python_api[textarea-Test-None-True-option-slug-False]
  Answer(document=None, question=Question(slug=effort-meet, type=textarea), value='Test')
---
# name: test_save_default_answer_python_api[textarea-Test-None-True-option-slug-True]
  Answer(document=None, question=Question(slug=effort-meet, type=textarea), value='Test')
---
